--- a/Web/web.html
+++ b/Web/web.html
@@ -17,7 +17,6 @@ li{
 }
 
 </style>
-
 	<meta charset="utf-8">
 	<head>
 		<title>Project PSIT</title>
@@ -29,11 +28,29 @@ li{
 		<div class="container">
 			<div class="topbar">
 				<ul class=bar1>
-					<a class="iconbar1" href="http://www.anime-sugoi.com/index.html">CARBON DIOXIDE</a>
-					<a class="iconbar3" href="https://www.facebook.com/profile.php?id=100000764270255">AFFETS</a>
-					<a class="iconbar2" href="https://www.facebook.com/profile.php?id=100000764270255">FUTURE</a>		
+					<a class="iconbar1" href="<!----------------------------------------------------->">CARBON DIOXIDE</a>
+					<a class="iconbar3" href="<!----------------------------------------------------->">AFFETS</a>
+					<a class="iconbar2" href="<!----------------------------------------------------->">FUTURE</a>		
 				</ul>
 			</div>
+		</div>
+		<p class="graph1">
+			<strong>''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''<br>
+			'                                                                            '<br>
+			'                                                                            '<br>
+			'                                                                            '<br>
+			'                                                                            '<br>
+			'                                                                            '<br>
+			'                           imagegraph			                             '<br>
+			'                                                                            '<br>
+			'                                                                            '<br>
+			'                                                                            '<br>
+			'                                                                            '<br>
+			'                                                                            '<br>
+			'                                                                            '<br>
+			'                                                                           ''<br>
+			''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''</strong>
 
+		</p>
 	</body>
 </html>
