--- a/Web/web.html
+++ b/Web/web.html
@@ -23,7 +23,7 @@ li{
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body class="back">
-		<div class="box"> Project PSIT </div>
+		<div class="box"><strong> Project PSIT </strong></div>
 		<div class="topmenu" role="navigation">
 		<div class="container">
 			<div class="topbar">
@@ -50,7 +50,24 @@ li{
 			'                                                                            '<br>
 			'                                                                           ''<br>
 			''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''</strong>
-
+		</p><br>
+		<h2 class="headpara1">CARBON DIOXIDE</h2>
+		<p class="para1">
+			TestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTest<br>
+			TestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTest<br>
+			TestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTest<br>
+			TestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTest<br>
+			TestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTest<br>
+			TestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTest<br>
+			TestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTest<br>
+			TestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTest<br>
+			TestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTest<br>
+			TestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTest<br>
+			TestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTest<br>
+			TestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTestTest<br>
 		</p>
-	</body>
+		<div class="imagebottom">
+			<img src="https://github.com/Core2931/Project-PSIT-CO2/blob/Tae/Web/footer_earth.png?raw=true" width="1519" height="150">
+		</div>
+		</body>
 </html>
